--- a/viewer/Makefile
+++ b/viewer/Makefile
@@ -2,7 +2,7 @@ all: build run
 
 
 build:
-	@gcc -o viewer main.c viewer.c -lm -lSDL2 -lSDL2_image
+	@gcc -o viewer main.c viewer.c -lm -lSDL2 -lSDL2_image -lSDL2_ttf
 
 
 
