viewer: fix makefile

--- a/viewer/Makefile
+++ b/viewer/Makefile
@@ -5,13 +5,13 @@ all: build run
 
 
 build:
-	@gcc -o $NAME main.c viewer.c utils.c -lm -lSDL2 -lSDL2_image -lSDL2_ttf
+	@gcc -o $(NAME) main.c viewer.c utils.c -lm -lSDL2 -lSDL2_image -lSDL2_ttf
 
 
 
 clean:
-	@rm ./$NAME
+	@rm ./$(NAME)
 
 
 run:
-	@./$NAME
+	@./$(NAME)
