--- a/tcp_server/Makefile
+++ b/tcp_server/Makefile
@@ -2,15 +2,23 @@ SERVER_APP=server
 CLIENT_APP=client
 
 
-all: windows
-
+all: unix
 
 windows: win_server win_client
+unix: unix_server unix_client
 
 
 win_server:
-	@gcc -o $(SERVER_APP) win_server.c tcp_server.c -lm -lws2_32
+	@gcc -o $(SERVER_APP) server.c win_tcp_server.c -lm -lws2_32
 
 
 win_client:
-	@gcc -o $(CLIENT_APP) win_client.c tcp_client.c -lm -lws2_32
+	@gcc -o $(CLIENT_APP) client.c win_tcp_client.c -lm -lws2_32
+
+
+unix_server:
+	@gcc -o $(SERVER_APP) server.c unix_tcp_server.c -lm
+
+
+unix_client:
+	@gcc -o $(CLIENT_APP) client.c unix_tcp_client.c -lm
