--- a/generator/Makefile
+++ b/generator/Makefile
@@ -1,5 +1,5 @@
 main: main.c generator.c
-	@gcc -o generator main.c generator.c
+	@gcc -o generator main.c generator.c -lm
 
 run: main
 	@./generator
